# llm_wiki

./: .env.production.example  .env.web  .gitignore  CLAUDE.md  Cargo.toml  docker-compose.prod.yml  nginx.conf  package-lock.json  package.json  vite.config.ts
src-server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
src-server/config/: default.json
src-server/migrations/: 001_initial_schema.sql  002_add_llm_providers.sql  003_add_wiki_page_columns.sql  004_add_ingest_jobs.sql  005_embedding_bge_m3.sql  006_chat_sessions.sql  007_review_items.sql  008_research_tasks.sql  009_search_providers.sql  010_llm_providers_team_scope.sql  011_chunk_level_embeddings.sql  012_ingest_reliability.sql
src-server/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
src-server/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  project_guard.rs
src-server/src/models/: auth.rs  mod.rs  project.rs  team.rs  user.rs
src-server/src/routes/: auth.rs  chat.rs  chat_sessions.rs  files.rs  graph.rs  health.rs  ingest.rs  llm_providers.rs  logs.rs  mod.rs  pages.rs  projects.rs  research.rs  reviews.rs  search.rs  search_providers.rs  teams.rs  users.rs
src-server/src/services/: chunking.rs  citations.rs  embedding.rs  graph.rs  ingest_pipeline.rs  ingest_queue.rs  ingest_worker.rs  llm.rs  llm_stream.rs  logging.rs  louvain.rs  mod.rs  rerank.rs  retrieval.rs  review.rs  search.rs  storage.rs  vector_store.rs  web_search.rs
src-server/src/tests/: auth_tests.rs  mod.rs  storage_test.rs
src-server/src/utils/: crypto.rs  jwt.rs  mod.rs  tests.rs
src-server/tests/: embedding_integration.rs  graph_integration.rs  search_golden_recall.rs  search_integration.rs
src-server/tests/integration/: auth_test.rs  mod.rs  (+15 more)
(+213 files in other folders)
