[package]
name = "llm-wiki-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP 框架
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "json"] }
pgvector = { version = "0.3", features = ["sqlx"] }

# Redis
deadpool-redis = "0.14"
redis = "0.24"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 认证
jsonwebtoken = "9.2"
bcrypt = "0.15"

# 加密
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# 环境变量
dotenvy = "0.15"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 配置
config = "0.14"

# 文件上传
multer = "3"
mime_guess = "2"

# HTTP 客户端（LLM API 调用 + embedding API）
reqwest = { version = "0.12", features = ["json", "stream"] }

# 流处理
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"

# 正则解析 wikilinks
regex-lite = "0.1"

# 文档解析（复用 Tauri 后端 crate）
docx-rs = "0.4"
calamine = "0.35"
llm-wiki-parser = { path = "../crates/llm-wiki-parser" }

# 图算法（Louvain 社区检测）
petgraph = "0.7"

[dev-dependencies]
axum-test = "15"
tempfile = "3"

# tests/integration 使用 mod.rs 入口（非 cargo 默认的 main.rs），需显式声明 target
[[test]]
name = "integration"
path = "tests/integration/mod.rs"
